crates/formatter/tests/snapshots/snapshots__migrations__000445_chat_message_runtime_ms.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chat_messages drop column runtime_ms;
