crates/formatter/tests/snapshots/snapshots__migrations__000445_chat_message_runtime_ms.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chat_messages add column runtime_ms bigint;
