crates/formatter/tests/snapshots/snapshots__migrations__000448_group_member_is_service_account.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view group_members_expanded;

create view group_members_expanded as
with
	all_members as (
		select group_members.user_id, group_members.group_id
		from group_members
		union
		select
			organization_members.user_id,
			organization_members.organization_id as group_id
		from organization_members
	)
select
	users.id as user_id,
	users.email as user_email,
	users.username as user_username,
	users.hashed_password as user_hashed_password,
	users.created_at as user_created_at,
	users.updated_at as user_updated_at,
	users.status as user_status,
	users.rbac_roles as user_rbac_roles,
	users.login_type as user_login_type,
	users.avatar_url as user_avatar_url,
	users.deleted as user_deleted,
	users.last_seen_at as user_last_seen_at,
	users.quiet_hours_schedule as user_quiet_hours_schedule,
	users.name as user_name,
	users.github_com_user_id as user_github_com_user_id,
	users.is_system as user_is_system,
	groups.organization_id,
	groups.name as group_name,
	all_members.group_id
from
	(
		(all_members join users on ((users.id = all_members.user_id)))
		join groups on ((groups.id = all_members.group_id))
	)
where (users.deleted = false);
