crates/formatter/tests/snapshots/snapshots__migrations__000450_chat_messages_provider_response_id.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chat_messages drop column provider_response_id;
